WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13716
REGRESSION: Three new layout test failures
https://bugs.webkit.org/show_bug.cgi?id=13716
Summary
REGRESSION: Three new layout test failures
Justin Garcia
Reported
2007-05-14 16:52:58 PDT
I caused a few layout test failures with my recent checkin. Investigating ...
Attachments
Add attachment
proposed patch, testcase, etc.
Justin Garcia
Comment 1
2007-05-14 19:49:15 PDT
The failing tests are: fast/events/frame-tab-focus.html fast/forms/focus-selection-input.html fast/forms/focus-selection-textarea.html
Justin Garcia
Comment 2
2007-05-14 23:46:13 PDT
r21476
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug